# Geometria-Computacional

./: AlgoritmosConvexHull.rar  AnimacionesConvexHull.rar  ConvexHulls.cpp  LICENSE  README.md  geo.h  geo.hpp
AlgoritmosConvexHull/: ConvexHulls.cpp  README.md  geo.h
AnimacionGaleriaArtes/: CMakeLists.txt  DCEL.hpp  DECL.hpp  README.md  Triangulacion.cpp
Animaciones/: CMakeLists.txt  GrahamScan.cpp  JarvisMarch.cpp  MonotoneChain.cpp  README.md  geo.h
AnimacionesConvexHull/: GrahamScan.cpp  JarvisMarch.cpp  MonotoneChain.cpp  README.md
ConvexHulls/: ConvexHulls.cpp  geo.h
TriangulaciónDelaunay/: CMakeLists.txt  Mallado.cpp  README.md  delaunay.hpp  input.txt  input2.txt  input3.txt  input4.txt  renderer.hpp  shader.hpp
TriangulaciónDelaunay/shaders/: fragment.fs  vertex.vs
